kubernetes/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: backend
 labels:
   app: backend
spec:
 replicas: 1
 selector:
  matchLabels: 
   app: backend
 template:
  metadata:
   labels:
    app: backend
  spec:
    imagePullSecrets:
     - name: ghcr-secret      
    containers:
     - name: backend
       image: ghcr.io/salar778/backend:latest
       ports:
        - containerPort: 9000
