kubernetes/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: frontend
 labels:
   app: frontend
spec:
 replicas: 1
 selector:
  matchLabels: 
   app: frontend
 template:
  metadata:
   labels:
    app: frontend
  spec:
    imagePullSecrets:
     - name: ghcr-secret      
    containers:
     - name: frontend
       image: ghcr.io/salar778/frontend:latest
       ports:
        - containerPort: 8080
