kubernetes/service-backend.yaml
apiVersion: v1
kind: Service
metadata: 
 name: backend-service
 labels:
   app: backend
spec:
 ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
 selector:
  app: backend
 type: ClusterIP
