kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata: 
 name: frontend-service
 labels:
   app: frontend
spec:
 ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
 selector:
  app: frontend
 type: ClusterIP
